create static contents

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,40 @@
 !!! XML
 !!! Strict
 
-%h1 A Better Team
-%a{:href => '/input'} input
+%h2 アジャイル度を評価しよう
+
+%p
+  このサイトではJames Shore氏とShane Warden氏の本『
+  %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'} アート・オブ・アジャイル デベロップメント
+  』に出てくる「アジャイル度を評価しよう」という質問表をとりあげています。
+  質問に答えることで、チームがどれだけうまくアジャイルを採り入れているか、評価結果を示します。チームがアジャイルへの理解を深めるのに役立ててください。
+
+%h2 大事なのは会話すること
+
+%p
+  この質問表を使う一番のメリットは、どうやってアジャイルに取り組んでいくかについてチームの中で議論が巻き起こることです。
+  チームがアジャイルかどうかに関わらず、質問にひとつひとつ答えていく中で会話が生まれることが本当に価値のあることなのです。
+  この質問表が、一緒に働いているチームのメンバーがお互いを知り、信頼と誠実さを築き、集中してXPプラクティスに取り組むきっかけになることを望みます。
+
+%h2 出典
+
+%p
+  このサイトでは
+  %a{:href => 'http://www.oreilly.co.jp/'} オライリー・ジャパン
+  様の許可を得て『
+  %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'} アート・オブ・アジャイル デベロップメント
+  』の本文の一部を引用しています。
+
+%ul
+  %li 和書名: 『アート・オブ・アジャイル デベロップメント』
+  %li 版元名: オライリー・ジャパン
+  %li 著者名: Shore James, Warden Shane
+  %li 監訳、訳者名: 木下 史彦, 平鍋 健児, 笹井 崇司
+
+%p
+  %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'}
+    %img{:src => 'http://images.amazon.com/images/P/4873113954.09.MZZZZZZZZ.jpg'}
+
+%p
+  %a{:href => '/input'} 質問に答える
 
