fixed markup for simplity and better output

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,11 +1,8 @@
-!!! XML
-!!! Strict
-
 %h2 アジャイル度を評価しよう
 
 %p
   このサイトではJames Shore氏とShane Warden氏の本『
-  %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'} アート・オブ・アジャイル デベロップメント
+  %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'}> アート・オブ・アジャイル デベロップメント
   』に出てくる「アジャイル度を評価しよう」という質問表をとりあげています。
   質問に答えることで、チームがどれだけうまくアジャイルを採り入れているか、評価結果を示します。チームがアジャイルへの理解を深めるのに役立ててください。
 
@@ -20,9 +17,9 @@
 
 %p
   このサイトでは
-  %a{:href => 'http://www.oreilly.co.jp/'} オライリー・ジャパン
+  %a{:href => 'http://www.oreilly.co.jp/'}> オライリー・ジャパン
   様の許可を得て『
-  %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'} アート・オブ・アジャイル デベロップメント
+  %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'}> アート・オブ・アジャイル デベロップメント
   』の本文の一部を引用しています。
 
 %ul
@@ -32,7 +29,7 @@
   %li 監訳、訳者名: 木下 史彦, 平鍋 健児, 笹井 崇司
 
 %p
-  %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'}
+  %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'}<
     %img{:src => 'http://images.amazon.com/images/P/4873113954.09.MZZZZZZZZ.jpg'}
 
 %p
