--- a/views/input.haml
+++ b/views/input.haml
@@ -2,10 +2,9 @@
   - @quiz.each do |quiz|
     %h2= quiz["title"]
     - quiz["items"].each_with_index do |item, index|
-      %div.item
-        %div.question
-          = item["question"]
-        %div.choice
+      .item
+        .question= item["question"]
+        .choice
           - [{:en => "yes", :jp => "はい"}, {:en => "no", :jp => "いいえ"}].each do |choice|
             %input{:type => "radio", :name => "#{quiz["category"]}#{index}", :value => choice[:en], :checked => instance_variable_get("@#{quiz["category"]}#{index}") == choice[:en]}
               = choice[:jp]
