--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,8 +10,7 @@
     .header
       %h1 abetterteam
       %hr
-    .content
-      != yield
+    .content!= yield
     .footer
       %hr
       Managed by
