generate permalink url

--- a/views/index.haml
+++ b/views/index.haml
@@ -36,5 +36,5 @@
     %img{:src => 'http://images.amazon.com/images/P/4873113954.09.MZZZZZZZZ.jpg'}
 
 %p
-  %a{:href => '/input'} 質問に答える
+  %a{:href => '/new'} 質問に答える
 
