--- a/views/index.haml
+++ b/views/index.haml
@@ -22,15 +22,19 @@
   %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'}> アート・オブ・アジャイル デベロップメント
   』の本文の一部を引用しています。
 
-%ul
-  %li 和書名: 『アート・オブ・アジャイル デベロップメント』
-  %li 版元名: オライリー・ジャパン
-  %li 著者名: Shore James, Warden Shane
-  %li 監訳、訳者名: 木下 史彦, 平鍋 健児, 笹井 崇司
+.left
+  %ul
+    %li 和書名: 『アート・オブ・アジャイル デベロップメント』
+    %li 版元名: オライリー・ジャパン
+    %li 著者名: Shore James, Warden Shane
+    %li 監訳、訳者名: 木下 史彦, 平鍋 健児, 笹井 崇司
 
-%p
-  %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'}<
-    %img{:src => 'http://images.amazon.com/images/P/4873113954.09.MZZZZZZZZ.jpg'}
+.right
+  %p
+    %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'}<
+      %img{:src => 'http://images.amazon.com/images/P/4873113954.09.MZZZZZZZZ.jpg'}
+
+.clearleft
 
 %p
   %a{:href => '/new'} 質問に答える
