--- a/views/index.haml
+++ b/views/index.haml
@@ -1,6 +1,6 @@
 %h2 アジャイル度を評価しよう
 
-%p
+%p.explain
   このサイトではJames Shore氏とShane Warden氏の本『
   %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'}> アート・オブ・アジャイル デベロップメント
   』に出てくる「アジャイル度を評価しよう」という質問表をとりあげています。
@@ -8,14 +8,14 @@
 
 %h2 大事なのは会話すること
 
-%p
+%p.explain
   この質問表を使う一番のメリットは、どうやってアジャイルに取り組んでいくかについてチームの中で議論が巻き起こることです。
   チームがアジャイルかどうかに関わらず、質問にひとつひとつ答えていく中で会話が生まれることが本当に価値のあることなのです。
   この質問表が、一緒に働いているチームのメンバーがお互いを知り、信頼と誠実さを築き、集中してXPプラクティスに取り組むきっかけになることを望みます。
 
 %h2 出典
 
-%p
+%p.explain
   このサイトでは
   %a{:href => 'http://www.oreilly.co.jp/'}> オライリー・ジャパン
   様の許可を得て『
@@ -34,8 +34,8 @@
     %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'}<
       %img{:src => 'http://images.amazon.com/images/P/4873113954.09.MZZZZZZZZ.jpg'}
 
-.clearleft
+.clear-left
 
-%p
-  %a{:href => '/new'} 質問に答える
+%p.explain
+  %a.new{:href => '/new'} 質問に答える
 
