modified homepage design

--- a/views/style.sass
+++ b/views/style.sass
@@ -35,6 +35,9 @@ a
     :border-style solid
     :border-color #3184CD
 
+  .screen
+    :text-align right
+
   p.explain
     :margin 0px 0px 20px 0px
     :padding 0px 0px 0px 140px
@@ -54,6 +57,9 @@ a
     :margin 0px 0px 20px 0px
     :padding 0px 0px 0px 140px
     :font-size 14px
+
+    ul
+      :list-style-type none
 
   .right
     :text-align right
