output point's unit

--- a/views/result.haml
+++ b/views/result.haml
@@ -6,7 +6,7 @@
     %h2 結果
     %ul
       - @quiz.each do |quiz|
-        %li #{quiz['title']} : #{quiz['point']}
+        %li #{quiz['title']} : #{quiz['point']}点
   .note
     %h2 得点にによって次のようなリスクがある
     %ul
