--- a/views/index.haml
+++ b/views/index.haml
@@ -14,7 +14,7 @@
 %p.explain
   この質問表を使う一番のメリットは、どうやってアジャイルに取り組んでいくかについてチームの中で議論が巻き起こることです。
   チームがアジャイルかどうかに関わらず、質問にひとつひとつ答えていく中で会話が生まれることが本当に価値のあることなのです。
-  この質問表が、一緒に働いているチームのメンバーがお互いを知り、信頼と誠実さを築き、集中してXPプラクティスに取り組むきっかけになることを望みます。
+  この質問表が、一緒に働いているチームのメンバーがお互いを知り、信頼と誠実さを築き、集中してXPプラクティスに取り組むきっかけになることを願います。
 
 %h2 出典
 
@@ -30,7 +30,7 @@
     %li 和書名: 『アート・オブ・アジャイル デベロップメント』
     %li 版元名: オライリー・ジャパン
     %li 著者名: Shore James, Warden Shane
-    %li 監訳、訳者名: 木下 史彦, 平鍋 健児, 笹井 崇司
+    %li 監訳・訳者名: 木下 史彦, 平鍋 健児, 笹井 崇司
 
 .right
   %p
