add some credits.
- hosted on heroku.
- original website is abetterteam.org.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -16,10 +16,13 @@
           team
     .content!= yield
     .footer
-      Managed by
+      Hosted on a
+      %a{:href => 'http://heroku.com'} Heroku
+      | Managed by
       %a{:href => 'http://fkino.net'} Fumihiko Kinoshita
       |
       %a{:href => 'http://twitter.com/fkino'} Feedback
       | Quiz by
       %a{:href => 'http://www.amazon.co.jp/o/ASIN/4873113954/fkino-22'} The Art of Agile Development
-
+      | Original Web Site is
+      %a{:href => 'http://www.abetterteam.org'} abetterteam.org
